Unicode encoder related change for unmapped characters. If unicode encoder cannot map a character to the target encoding, it returns used unicode length including the unmapped character. That is true for all encoder except ISO-2022-JP (bug #15706). Changed the callers to match the encoder behavior. bug 8865, r=cata.